Update 'hwhkd1y9n-python' component image to: quay.io/rhtap_qe/rhtap-qe:53775bc9665ea9120b82c239618d6c66b948c1ec@sha256:2cb5dce96afdc15f0d9f72d1a5d244d1e74bdca13306567f4fb6b2827516992b

--- a/components/hwhkd1y9n-python/overlays/development/deployment-patch.yaml
+++ b/components/hwhkd1y9n-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: hwhkd1y9n-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:53775bc9665ea9120b82c239618d6c66b948c1ec@sha256:2cb5dce96afdc15f0d9f72d1a5d244d1e74bdca13306567f4fb6b2827516992b
+          name: container-image
